syntax = "proto3";


option go_package = "genproto/schedule_service";

package schedule_service;



service GroupService {
    rpc Create(CreateGroup) returns (Group) {}
    rpc GetByID(GroupPrimaryKey) returns (Group) {}
    rpc GetList(GetListGroupRequest) returns (GetListGroupResponse) {}
    rpc Update(UpdateGroup) returns (Group) {}
    rpc Delete(GroupPrimaryKey) returns (GroupEmpty) {}
}


message GroupEmpty{}

message GroupPrimaryKey {
    string id = 1;
}

message CreateGroup {
    string branch_id = 1;
    string type =2;
    string teacher_id = 3;
    string support_teacher_id = 4;
}

message Group {
    string id = 1;
    string uniqueID = 2;
    string branch_id = 3;
    string type =4;
    string teacher_id = 5;
    string support_teacher_id = 6;
    string created_at = 7;
    string updated_at = 8;

}

message UpdateGroup {
    string id = 1;
    string type =2;
    string teacher_id = 3;
    string support_teacher_id = 4;

}

message GetListGroupRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListGroupResponse {
    int64 count = 1;
    repeated Group Groups = 2;
}
